# SBSView

./: .gitignore  Cargo.toml
sbs_core/: Cargo.toml
sbs_core/src/: decode.rs  lib.rs  sbs.rs  ty.rs  value.rs
sbs_uart/: Cargo.toml
sbs_uart/src/: error.rs  frame_decoder.rs  lib.rs  sbs_uart.rs  serial_worker.rs
sbs_view/: Cargo.toml
sbs_view/src/: main.rs  view.rs  views.rs
sbs_view/src/signals/: window_buffer.rs
sbs_view/src/views/: connect_view.rs  main_view.rs  plot_view.rs  sidebar_settings_view.rs  signals_view.rs
